updated to be to delete board only with the correct password

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "helmet": "^3.1.0",
     "mocha": "^10.0.0",
+    "moments": "^0.0.2",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   },
