--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.1",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
-    "helmet": "^3.1.0",
+    "helmet": "^3.23.3",
     "mocha": "^10.0.0",
     "moments": "^0.0.2",
     "mongoose": "^6.6.5",
@@ -27,5 +27,11 @@
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0"
+  }
 }
