--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.1",
+    "dayjs": "^1.11.6",
     "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "helmet": "^3.23.3",
